Implementação de envio de plano por email.

--- a/src/main/resources/templates/SendPlansToEmail.html
+++ b/src/main/resources/templates/SendPlansToEmail.html
@@ -87,7 +87,7 @@
     <div id="blueBackground">
         <h1 style="color: #5e9ca0; text-align: center;"><span style="color: #000080;"> Valid Usability Assessment</span></h1>
         <p style="padding-left: 40px;">Hi,</p>
-        <p style="padding-left: 40px;">Attached is the evaluation plan requested.</p>
+        <p style="padding-left: 40px;">Attached to the email is a requested usability assessment plan.</p>
         <p style="padding-left: 40px;">Plan name: :plan</p>
         <p style="padding-left: 40px;">&nbsp;</p>
     </div>
