Inicio implementação regra de colaboração.

--- a/src/main/resources/templates/CollaboratorMail.html
+++ b/src/main/resources/templates/CollaboratorMail.html
@@ -92,7 +92,7 @@
             <strong>:authorName</strong> to become a
             <br/>collaborator in an assessment preparation.</p>
         <p style="padding-left: 30px;">To enter as an assessment collaborator, it is necessary to <br/><a
-                href="localhost:4200/login">login</a> to the platform and add the <strong>following code</strong> in
+                href="https://validuatool-app.herokuapp.com/auth/login">login</a> to the platform and add the <strong>following code</strong> in
             <br/>the "<em>Enter as collaborator</em>" tab.</p>
         <p style="padding-left: 30px;"><strong>&nbsp;Code:</strong> <em>:assessmentUid</em></p>
     </div>
