--- a/src/main/resources/templates/NewCollaboratorMail.html
+++ b/src/main/resources/templates/NewCollaboratorMail.html
@@ -92,9 +92,9 @@
             assessment preparation.</p>
         <p style="padding-left: 30px;">We noticed that your email doesn't have a registration on our platform yet.</p>
         <p style="padding-left: 30px;">To enter as an evaluation contributor, you must do the following steps:</p>
-        <p style="padding-left: 30px;">1. Perform <a href="localhost:4200/api/user">registration</a> on our platform.
+        <p style="padding-left: 30px;">1. Perform <a href="https://validuatool-app.herokuapp.com/auth/register">registration</a> on our platform.
         </p>
-        <p style="padding-left: 30px;">2. <a href="localhost:4200/login">Login</a> to the platform and add the <strong>following
+        <p style="padding-left: 30px;">2. <a href="https://validuatool-app.herokuapp.com/auth/login">Login</a> to the platform and add the <strong>following
             code</strong> in the <em>"Enter as collaborator</em>" tab.</p>
         <p style="padding-left: 30px;"><strong>Code:</strong> <em>:assessmentUid</em></p>
     </div>
