Envio da revisão aos colaboradores.

--- a/src/main/resources/templates/FinishedReview.html
+++ b/src/main/resources/templates/FinishedReview.html
@@ -83,30 +83,30 @@
         }
     </style>
 </head>
-<div>
-    <div id="blueBackground">
-        <h1 style="color: #5e9ca0; text-align: center;"><span style="color: #000080;"> Valid Usability Assessment</span></h1>
-        <p>&nbsp;</p>
-        <p style="padding-left: 20px;">Hi,<br />The review of the usability evaluation plan that you are part of as an author or contributor has been completed.</p>
-        <p style="padding-left: 20px;">Below see the comments made by revisador on your planning:</p>
-        <p style="padding-left: 20px;">&nbsp;</p>
-        <p style="text-align: left; padding-left: 30px;"><strong>Comment on the application section:</strong></p>
-        <p style="text-align: left; padding-left: 70px;">:applicationComent</p>
-        <p style="text-align: left; padding-left: 30px;"><strong>Comment on the goals section:</strong></p>
-        <p style="text-align: left; padding-left: 70px;">:goalsComent</p>
-        <p style="text-align: left; padding-left: 30px;"><strong>Comment on the variables and measurement section:</strong></p>
-        <p style="text-align: left; padding-left: 70px;">:variableComent</p>
-        <p style="text-align: left; padding-left: 30px;"><strong>Comment on the participants section:</strong></p>
-        <p style="text-align: left; padding-left: 70px;">:participantComent</p>
-        <p style="text-align: left; padding-left: 30px;"><strong>Comment on the tasks and materials section:</strong></p>
-        <p style="text-align: left; padding-left: 70px;">:taskComent</p>
-        <p style="text-align: left; padding-left: 30px;"><strong>Comment on the procedure section:</strong></p>
-        <p style="text-align: left; padding-left: 70px;">:procedureComent</p>
-        <p style="text-align: left; padding-left: 30px;"><strong>Comment on the data collection and data analysis section:</strong></p>
-        <p style="text-align: left; padding-left: 70px;">:dataComent</p>
-        <p style="text-align: left; padding-left: 30px;"><strong>Comment on the threats to validity section:</strong></p>
-        <p style="text-align: left; padding-left: 70px;">:threatComent</p>
-        <p style="text-align: left; padding-left: 30px;">&nbsp;</p>
-        <p style="padding-left: 30px;">&nbsp;</p>
-    </div>
+<div id="blueBackground">
+    <h1 style="color: #5e9ca0; text-align: center;"><span style="color: #000080;"> Valid Usability Assessment</span></h1>
+    <p>&nbsp;</p>
+    <p style="padding-left: 20px;">Hi,<br />The review of the usability evaluation plan that you are part of as an author or contributor has been completed.</p>
+    <p style="padding-left: 20px;"><strong>Project Name:&nbsp;</strong>:projectName</p>
+    <p style="padding-left: 20px;">The result of the review is also attached to the email and can be downloaded on the platform.</p>
+    <p style="padding-left: 20px;">&nbsp;</p>
+    <p style="padding-left: 20px;"><span style="text-decoration: underline;">Below see the comments made by revisador on your planning:</span></p>
+    <p style="text-align: left; padding-left: 30px;"><strong>Comment on the application section:</strong></p>
+    <p style="text-align: left; padding-left: 70px;">:applicationComent</p>
+    <p style="text-align: left; padding-left: 30px;"><strong>Comment on the goals section:</strong></p>
+    <p style="text-align: left; padding-left: 70px;">:goalsComent</p>
+    <p style="text-align: left; padding-left: 30px;"><strong>Comment on the variables and measurement section:</strong></p>
+    <p style="text-align: left; padding-left: 70px;">:variableComent</p>
+    <p style="text-align: left; padding-left: 30px;"><strong>Comment on the participants section:</strong></p>
+    <p style="text-align: left; padding-left: 70px;">:participantComent</p>
+    <p style="text-align: left; padding-left: 30px;"><strong>Comment on the tasks and materials section:</strong></p>
+    <p style="text-align: left; padding-left: 70px;">:taskComent</p>
+    <p style="text-align: left; padding-left: 30px;"><strong>Comment on the procedure section:</strong></p>
+    <p style="text-align: left; padding-left: 70px;">:procedureComent</p>
+    <p style="text-align: left; padding-left: 30px;"><strong>Comment on the data collection and data analysis section:</strong></p>
+    <p style="text-align: left; padding-left: 70px;">:dataComent</p>
+    <p style="text-align: left; padding-left: 30px;"><strong>Comment on the threats to validity section:</strong></p>
+    <p style="text-align: left; padding-left: 70px;">:threatComent</p>
+    <p style="text-align: left; padding-left: 30px;">&nbsp;</p>
+    <p style="padding-left: 30px;">&nbsp;</p>
 </div>
