Correção na atualização de nome de projeto e descrição.

--- a/src/main/resources/templates/FinishedReview.html
+++ b/src/main/resources/templates/FinishedReview.html
@@ -91,7 +91,7 @@
     <p style="padding-left: 20px;">The result of the review is also attached to the email and can be downloaded on the platform.</p>
     <p style="padding-left: 20px;">&nbsp;</p>
     <p style="padding-left: 20px;"><span style="text-decoration: underline;">Below see the comments made by revisador on your planning:</span></p>
-    <p style="text-align: left; padding-left: 30px;"><strong>Comment on the application section:</strong></p>
+    <p style="text-align: left; padding-left: 30px;"><strong>Comment on the smartCityQuestionnaire section:</strong></p>
     <p style="text-align: left; padding-left: 70px;">:applicationComent</p>
     <p style="text-align: left; padding-left: 30px;"><strong>Comment on the goals section:</strong></p>
     <p style="text-align: left; padding-left: 70px;">:goalsComent</p>
